UI changes to the directions panel to make it look neater, easier to read, and to close

--- a/django_server/dublin_bus/bus/static/bus/css/styles.css
+++ b/django_server/dublin_bus/bus/static/bus/css/styles.css
@@ -116,7 +116,7 @@ p, input, label {
     font-family: Orienta, sans-serif; 
   }
   #directions {
-    position: absolute;
+    position: static;
     z-index: 5;
     background-color: #fff;
     border: 1px solid#252d5a;
