--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -31,12 +31,15 @@
                     <!-- Hidden fields are for storing lat lon not for showing -->
                     <input type="hidden" id="start_lat" />
                     <input type="hidden" id="start_lng" />
+                    <input type="hidden" id="start_destination" />
+                    
                
                   <label>To:</label>
                     <input id="searchTextField_destination" type="text" onClick="this.select()" class="form-control" placeholder="Enter a bus stop or an address">
                     <!-- Hidden fields are for storing lat lon not for showing -->
                     <input type="hidden" id="stop_lat" />
                     <input type="hidden" id="stop_lng" />
+                    <input type="hidden" id="stop_destination" />
                <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
                
                   <label>Travel Date and Time:</label>
@@ -49,8 +52,9 @@
                       <!-- Submit button for the journey plannner -->
 <input id="submit-btn" type="button" form="form1" class="btn btn-warning" value="Submit" onclick="myFunction()" style="margin-top: 10px; margin-bottom: 10px;">
 <!-- sac: this is where the share my trip link pops up -->
+
 <small id = "share_trip" style="visibility: hidden;" class="text-muted">Share My Trip
-    <a class = "ml-2" href="#" onclick="get_link()">Click here</a>
+    <a class = "ml-2" href="#" onclick="get_shareable_link()" data-toggle="modal" data-target="#sharable_link">Click here</a>
 </small>
 <!-- ----- -->
             <div id="directions" class="card">  
@@ -117,6 +121,35 @@
 
 
     <div><div id="map"> hello </div></div>
+
+
+<!-- modal -->
+
+<!-- Modal -->
+<div class="modal fade" id="sharable_link" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Sharable Link generated</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p id="link_paragraph"></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-warning" onclick="copy_link()" data-dismiss="modal">Copy to clipboard</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--  -->
+
+
+
  
         <script src="{% static 'bus/js/tourist.js' %}"></script>
         <script src="{% static 'bus/js/input.js' %}"></script>
