the js part now gets link and generate link with all co-ordinates, display it in modal and copy to clipboard

--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -136,7 +136,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <p id="link_paragraph"></p>
+        <p id="link_paragraph" style="word-wrap: break-word;"></p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
