--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -74,7 +74,7 @@
               </div>
     <!-- This code is for the Tourism tab -->
     <div id="tourism" class="container tab-pane fade">
-      <div class="card col-md-4" id="tourism-card">
+      <div class="card col-md-8" id="tourism-card">
      
         <h3 class="card-title">Tourism</h3>
         <p id="ok">hi</p>
@@ -101,9 +101,9 @@
     </div>
     <!-- This code is for the twitter tab -->
     <div id="twitter" class="container tab-pane fade">
-      <div class="card col-md-12" id="twitter-card">
+      <div class="card col-md-8" id="twitter-card">
       <h3 class="card-title">Dublin Bus Twitter</h3>
-        Tweet tweet
+      <a class="twitter-timeline" href="https://twitter.com/dublinbusnews?ref_src=twsrc%5Etfw">Tweets by dublinbusnews</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>   
      </div>
   </div>
