--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -75,55 +75,46 @@
     <!-- This code is for the Tourism tab -->
     <div id="tourism" class="container tab-pane fade">
       <div class="card col-md-8" id="tourism-card">
-     
         <h3 class="card-title">Tourism</h3>
-        <p id="ok">hi</p>
-        
-        <form id="form2">
-          <input type="text" class="form-control" id="route">
-          <input type="hidden" id="stop_lat" />
-          <input type="hidden" id="stop_lng" />
-          <button class="btn btn-warning" form="form2" onclick="getLocation()">Try It</button>
-</form>
+          <div id="locationList"></div>
           <div class="card-body">
-      <p>Guess what it's tourism time</p>
-          <img src="{% static 'DublinAirport.jpeg' %}" class="rounded" alt="Airport">
-              The airport<input type="button" class="btn btn-warning btn-info btn-sm" value="Find Route">
-          <img src="{% static 'Guinness.jpeg' %}" class="rounded" alt="Black Gates">
-              Guinness Store House<input type="button" class="btn btn-warning btn-info btn-sm" value="Find Route">
+          <img src="{% static 'Guinness.jpeg' %}" class="img-fluid rounded" alt="Black Gates">
+          <button type="button" class="btn btn-warning btn-info btn-sm" id="Guinness">Directions to Guinness!</button><br>
              
-          <img src="{% static 'NGI.jpeg' %}" class="rounded" alt="National Gallery">
-              National Gallery of Ireland<input type="button" class="btn btn-warning btn-info btn-sm" value="Find Route">
-          <img src="{% static 'NLM.jpeg' %}" class="rounded" alt="Leprechaun">
-              National Leprechaun Museum<input type="button" class="btn btn-warning btn-info btn-sm" value="Find Route">
+          <img src="{% static 'NGI.jpeg' %}" class="img-fluid rounded" alt="National Gallery">
+        <button type="button" class="btn btn-warning btn-info btn-sm" id="art">Directions to NGI</button><br>
+          <img src="{% static 'NLM.jpeg' %}" class="img-fluid rounded" alt="Leprechaun">
+             <button type="button" class="btn btn-warning btn-info btn-sm" id="Leprechaun">Directions to the National Leprechaun Museum</button><br>
     </div>
           </div>
     </div>
     <!-- This code is for the twitter tab -->
     <div id="twitter" class="container tab-pane fade">
-      <div class="card col-md-8" id="twitter-card">
+      <div class="col-md-8" id="twitter-card">
       <h3 class="card-title">Dublin Bus Twitter</h3>
-      <a class="twitter-timeline" href="https://twitter.com/dublinbusnews?ref_src=twsrc%5Etfw">Tweets by dublinbusnews</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <a class="twitter-timeline" href="https://twitter.com/dublinbusnews?ref_src=twsrc%5Etfw">Tweets by dublinbusnews</a> 
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>   
      </div>
   </div>
 </div>
-
-
+   
     <div><div id="map"> hello </div></div>
  
-        <script src="{% static 'bus/js/tourist.js' %}"></script>
+        
         <script src="{% static 'bus/js/input.js' %}"></script>
 <!--Jquery for map-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <!--Script for Map and Marker 01-->
-
+ 
 <script src="{% static 'bus/js/map_init.js' %}"></script>
+
  <!--MAPS API-->
 <script 
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFtH8qWuX2LGmHcicY-vLHfYuB7D6WI7Y&libraries=places&callback=initMap" >
 
 </script>
+<script src="{% static 'bus/js/tourist.js' %}"></script>  
 <script src="{% static 'bus/js/map_auto_complete_text.js' %}"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js"></script>
