--- a/django_server/dublin_bus/bus/templates/bus/base_layout.html
+++ b/django_server/dublin_bus/bus/templates/bus/base_layout.html
@@ -6,7 +6,8 @@
     <title>Dublin Bus</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">   
     <!-- Jquery file -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Remove to fix the journey planner bug -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
     <!-- Bootstrap things -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
@@ -63,7 +64,7 @@
             <a class="nav-link" href="{% url 'register' %}">Sign Up</a>
           </li>
 
-        {% endif %}
+        {% endif %} 
       </ul>
     </div>
   </nav>
